Remove fixed height for mobile images, make sure in mobile images stretch to maximum of screen

--- a/src/components/slideshow.module.scss
+++ b/src/components/slideshow.module.scss
@@ -24,6 +24,7 @@
   position: relative;
   top: 0;
   user-select: none;
+  max-width: 100%;
 }
 
 .photo-enter {
